Add open and close functionality to modal

--- a/part-3/grocer.html
+++ b/part-3/grocer.html
@@ -73,11 +73,11 @@
           </li>
         </ul>
       </div>
-      <div class='modal' id='modal'>
+      <div class='modal modal-close' id='modal'>
         <div class='modal-body'>
           <div class='grid header'>
             <div class='cell'>
-              <h1 class='cart-header'>Cart<span class='delete-btn'>X</span></h1>
+              <h1 class='cart-header'>Cart<div id='close-btn'>X</div></h1>
             </div>
           </div>
           <div class='grid list'>
@@ -95,7 +95,7 @@
           </div>
         </div>
       </div>
-      <div class="modal-overlay" id="modal-overlay"></div>
+      <div class="modal-overlay modal-close" id="modal-overlay"></div>
     <script type="text/javascript" src="grocer.js"></script>
   </body>
 </html>
