Add functions for all necessary functionality

--- a/part-3/grocer.html
+++ b/part-3/grocer.html
@@ -11,7 +11,7 @@
       <h1>Grocer</h1>
       <button type="button" id="cart-button">
         Cart
-        &nbsp;<span id="cart-item-count">(3)</span>
+        &nbsp;<span id="cart-item-count">(40)</span>
       </button>
     </header>
 
@@ -31,17 +31,17 @@
           <li class="item flex flex-row-between">
             <span class="item-name">Onions</span>
             <span class="item-price">$1.11</span>
-            <button type="button">Add to cart</button>
+            <button type="button" class='add-button'>Add to cart</button>
           </li>
           <li class="item flex flex-row-between">
             <span class="item-name">Tomatoes</span>
             <span class="item-price">$1.56</span>
-            <button type="button">Add to cart</button>
+            <button type="button" class='add-button'>Add to cart</button>
           </li>
           <li class="item flex flex-row-between">
             <span class="item-name">Carrots</span>
             <span class="item-price">$2.88</span>
-            <button type="button">Add to cart</button>
+            <button type="button" class='add-button'>Add to cart</button>
           </li>
         </ul>
 
@@ -50,7 +50,7 @@
           <li class="item flex flex-row-between">
             <span class="item-name">Cold Cuts</span>
             <span class="item-price">$1.47</span>
-            <button type="button">Add to cart</button>
+            <button type="button" class='add-button'>Add to cart</button>
           </li>
         </ul>
 
@@ -59,17 +59,17 @@
           <li class="item flex flex-row-between">
             <span class="item-name">Orange Juice</span>
             <span class="item-price">$2.52</span>
-            <button type="button">Add to cart</button>
+            <button type="button" class='add-button'>Add to cart</button>
           </li>
           <li class="item flex flex-row-between">
             <span class="item-name">Ice Cream</span>
             <span class="item-price">$14.08</span>
-            <button type="button">Add to cart</button>
+            <button type="button" class='add-button'>Add to cart</button>
           </li>
           <li class="item flex flex-row-between">
             <span class="item-name">Pizza</span>
             <span class="item-price">$16.61</span>
-            <button type="button">Add to cart</button>
+            <button type="button" class='add-button'>Add to cart</button>
           </li>
         </ul>
       </div>
@@ -82,11 +82,7 @@
           </div>
           <div class='grid list'>
             <div class='cell'>
-              <ul class='cart-list'>
-                <li class='cart-list-item'><div>title</div><div>price</div></li>
-                <li class='cart-list-item'><div>title</div><div>price</div></li>
-                <li class='cart-list-item'><div>title</div><div>price</div></li>
-              </ul>
+              <ul class='cart-list'></ul>
             </div>
           </div>
           <div class='grid bottom'>
