Complete all functionality

--- a/part-3/grocer.html
+++ b/part-3/grocer.html
@@ -9,9 +9,9 @@
   <body class="flex flex-column">
     <header class="site-header flex flex-row-between">
       <h1>Grocer</h1>
-      <button type="button" id="cart-button">
+      <button type="button" id="cart-btn">
         Cart
-        &nbsp;<span id="cart-item-count">(40)</span>
+        &nbsp;<span id="cart-item-count">(0)</span>
       </button>
     </header>
 
@@ -87,7 +87,7 @@
           </div>
           <div class='grid bottom'>
             <div class='cell button-cell'><button class='clear-btn'>Clear</button></div>
-            <div class='cell'><h5>Total<span class='total-amount'>$10.34</span></h5></div>
+            <div class='cell'><h5>Total<span class='total-amount'>$0.00</span></h5></div>
           </div>
         </div>
       </div>
