Fix modal scroll

--- a/part-3/grocer.html
+++ b/part-3/grocer.html
@@ -85,7 +85,7 @@
               <ul class='cart-list'></ul>
             </div>
           </div>
-          <div class='grid bottom'>
+          <div class='grid footer'>
             <div class='cell button-cell'><button class='clear-btn'>Clear</button></div>
             <div class='cell'><h5>Total<span class='total-amount'>$0.00</span></h5></div>
           </div>
